--- a/index.html
+++ b/index.html
@@ -1,70 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mines</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        .grid { display: grid; grid-template-columns: repeat(5, 50px); gap: 5px; margin: 20px auto; }
-        .cell { width: 50px; height: 50px; background: #ccc; display: flex; align-items: center; justify-content: center; cursor: pointer; }
-        .cell.revealed { background: #fff; }
-        .cell.mine { background: red; color: white; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mines Game</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle, #1a1a2e, #16213e);
+      overflow: hidden;
+      flex-direction: column;
+    }
+
+    .game-container {
+      display: grid;
+      grid-template-columns: repeat(5, 60px);
+      grid-gap: 5px;
+      background-color: #0f3460;
+      padding: 10px;
+      border-radius: 15px;
+      box-shadow: 0 0 50px rgba(15, 52, 96, 0.8);
+      position: relative;
+      pointer-events: none;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .cell {
+      width: 60px;
+      height: 60px;
+      background: linear-gradient(145deg, #2c69a5, #236090);
+      border: 1px solid #1b4079;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.4),
+                  inset -2px -2px 5px rgba(255, 255, 255, 0.1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 28px;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .cell:hover {
+      background: linear-gradient(145deg, #3379c6, #2a6da1);
+    }
+
+    .cell.clicked {
+      background: linear-gradient(145deg, #1f4f7e, #19466d);
+      cursor: default;
+    }
+
+    .cell.mine {
+      background: radial-gradient(circle, #ff5555, #aa0000);
+    }
+
+    .cell.star {
+      text-shadow: 0 0 10px rgba(255, 255, 0, 0.8), 0 0 20px rgba(255, 255, 0, 0.8);
+    }
+
+    .floating-balls {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
+
+    .ball {
+      width: 10px;
+      height: 10px;
+      background: #ffffff88;
+      border-radius: 50%;
+      position: absolute;
+      animation: float 10s infinite;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0) translateX(0);
+        opacity: 0.6;
+      }
+      50% {
+        transform: translateY(-200px) translateX(50px);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-400px) translateX(-50px);
+        opacity: 0;
+      }
+    }
+
+    .button-container {
+      margin-top: 40px;
+      display: flex;
+      gap: 0;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .button-container button {
+      width: 60px;
+      height: 60px;
+      background: linear-gradient(145deg, #4b77be, #2c69a5);
+      color: white;
+      font-size: 28px;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      transition: background 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .button-container button:hover {
+      background: linear-gradient(145deg, #2c69a5, #4b77be);
+      box-shadow: 0 0 30px rgba(0, 0, 255, 0.8); /* Яркое свечение кнопок */
+    }
+
+    .get-signal-btn {
+      padding: 10px 20px;
+      background: linear-gradient(145deg, #4b77be, #2c69a5);
+      color: white;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      transition: background 0.3s ease, box-shadow 0.3s ease;
+      margin-top: 20px;
+    }
+
+    .get-signal-btn:hover {
+      background: linear-gradient(145deg, #2c69a5, #4b77be);
+      box-shadow: 0 0 40px rgba(42, 103, 163, 0.8); /* Яркое свечение кнопки GET SIGNAL, теперь того же цвета */
+    }
+
+    .middle-rectangle {
+      height: 60px;
+      width: 120px;
+      background-color: #0f3460;
+      margin-left: 20px;
+      margin-right: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 28px;
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 0 30px rgba(15, 52, 96, 1.0); /* Яркое свечение прямоугольника */
+    }
+
+    .middle-rectangle span {
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6); /* Белое свечение для цифры */
+    }
+  </style>
 </head>
 <body>
-    <h1>Mines</h1>
-    <div class="grid" id="grid"></div>
-    <p id="message"></p>
+  <div class="game-container">
+    <div class="floating-balls">
+      <div class="ball" style="top: 50%; left: 20%; animation-delay: 0s;"></div>
+      <div class="ball" style="top: 60%; left: 80%; animation-delay: 2s;"></div>
+      <div class="ball" style="top: 40%; left: 50%; animation-delay: 4s;"></div>
+      <div class="ball" style="top: 70%; left: 30%; animation-delay: 6s;"></div>
+    </div>
+  </div>
 
-    <script>
-        const grid = document.getElementById("grid");
-        const message = document.getElementById("message");
-        const size = 5; // Размер поля
-        const minesCount = 3; // Количество мин
+  <div class="button-container">
+    <button class="minus-btn">-</button>
+    <div class="middle-rectangle" id="number-display"><span>3</span></div>
+    <button class="plus-btn">+</button>
+  </div>
 
-        // Создаем массив поля с минами
-        const createGrid = () => {
-            const cells = Array(size * size).fill(0);
-            for (let i = 0; i < minesCount; i++) {
-                let randomIndex;
-                do {
-                    randomIndex = Math.floor(Math.random() * cells.length);
-                } while (cells[randomIndex] === 1);
-                cells[randomIndex] = 1;
-            }
-            return cells;
-        };
+  <button class="get-signal-btn">GET SIGNAL</button>
 
-        const mines = createGrid();
+  <script>
+    const container = document.querySelector('.game-container');
+    let mineCount = 3;
+    const cells = [];
+    const mines = new Set();
 
-        // Рендер поля
-        mines.forEach((mine, index) => {
-            const cell = document.createElement("div");
-            cell.className = "cell";
-            cell.addEventListener("click", () => handleClick(cell, mine));
-            grid.appendChild(cell);
+    // Генерация случайных мин
+    function generateMines() {
+      mines.clear();
+      while (mines.size < mineCount) {
+        const minePosition = Math.floor(Math.random() * 25);
+        mines.add(minePosition);
+      }
+    }
+
+    // Создание ячеек
+    function createCells() {
+      cells.forEach(cell => cell.remove());
+      cells.length = 0;
+      for (let i = 0; i < 25; i++) {
+        const cell = document.createElement('div');
+        cell.className = 'cell';
+        container.appendChild(cell);
+
+        cell.addEventListener('click', () => {
+          if (cell.classList.contains('clicked')) return;
+
+          cell.classList.add('clicked');
+
+          if (mines.has(i)) {
+            cell.classList.add('mine');
+            alert('Вы проиграли! Это была мина.');
+            resetGame();
+          } else {
+            cell.innerHTML = '⭐';
+            cell.classList.add('star');
+          }
         });
 
-        // Обработка кликов
-        const handleClick = (cell, mine) => {
-            if (mine) {
-                cell.classList.add("mine");
-                message.textContent = "Вы проиграли!";
-                revealAll();
-            } else {
-                cell.classList.add("revealed");
-                message.textContent = "Продолжайте играть!";
-            }
-        };
+        cells.push(cell);
+      }
+    }
 
-        // Показываем все мины
-        const revealAll = () => {
-            Array.from(grid.children).forEach((cell, i) => {
-                if (mines[i]) cell.classList.add("mine");
-                cell.style.pointerEvents = "none";
-            });
-        };
-    </script>
+    // Функция сброса игры
+    function resetGame() {
+      cells.forEach(cell => {
+        cell.className = 'cell';
+        cell.innerHTML = '';
+      });
+
+      generateMines();
+    }
+
+    // Событие на кнопку "GET SIGNAL"
+    document.querySelector('.get-signal-btn').addEventListener('click', () => {
+      resetGame();
+      container.style.pointerEvents = 'auto';
+      const numberOfCellsToOpen = Math.floor(Math.random() * 4) + 4;
+      let openedCells = 0;
+
+      const revealSafeCells = () => {
+        if (openedCells >= numberOfCellsToOpen) {
+          clearInterval(intervalId);
+        } else {
+          const randomIndex = Math.floor(Math.random() * 25);
+          if (!mines.has(randomIndex) && !cells[randomIndex].classList.contains('clicked')) {
+            cells[randomIndex].classList.add('clicked');
+            cells[randomIndex].innerHTML = '⭐';
+            cells[randomIndex].classList.add('star');
+            openedCells++;
+          }
+        }
+      };
+
+      const intervalId = setInterval(() => {
+        revealSafeCells();
+      }, 400);
+    });
+
+    generateMines();
+    createCells();
+
+    document.querySelector('.plus-btn').addEventListener('click', () => {
+      if (mineCount < 10) {
+        mineCount++;
+        document.getElementById('number-display').textContent = mineCount;
+      }
+    });
+
+    document.querySelector('.minus-btn').addEventListener('click', () => {
+      if (mineCount > 3) {
+        mineCount--;
+        document.getElementById('number-display').textContent = mineCount;
+      }
+    });
+  </script>
 </body>
 </html>
